--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:npg_7XxQU0pRntmy@ep-young-surf-adrq2lu3-pooler.c-2.us-east-1.aws.neon.tech/blueshark?sslmode=require&channel_binding=require"
+
+JWT_SECRET="vR7#p9Lq8&Xz$2Bf!dT6wKm4@NjQ1sYx"
