--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,14 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "outDir": "dist",
     "rootDir": "./",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
-  },
-  "include": ["src", "index.ts"],
-  "exclude": ["node_modules", "dist"]
+    "skipLibCheck": true
+  }
 }
