Thursday Blueshark Update

--- a/.env
+++ b/.env
@@ -67,3 +67,6 @@ NEXT_PUBLIC_GET_SUBBATCH_SUPERVISOR=${NEXT_PUBLIC_API_URL}/supervisors/sub-batch
 #Workers Logs
 NEXT_PUBLIC_CREATE_WORKER_LOGS=${NEXT_PUBLIC_API_URL}/worker-logs/logs
 NEXT_PUBLIC_GET_WORKER_LOGS=${NEXT_PUBLIC_API_URL}/worker-logs
+
+#Send to another Department Api 
+NEXT_PUBLIC_SEND_TO_ANOTHER_DEPARTMENT=${NEXT_PUBLIC_API_URL}/sub-batches/advance-department
