--- a/.env
+++ b/.env
@@ -68,5 +68,8 @@ NEXT_PUBLIC_GET_SUBBATCH_SUPERVISOR=${NEXT_PUBLIC_API_URL}/supervisors/sub-batch
 NEXT_PUBLIC_CREATE_WORKER_LOGS=${NEXT_PUBLIC_API_URL}/worker-logs/logs
 NEXT_PUBLIC_GET_WORKER_LOGS=${NEXT_PUBLIC_API_URL}/worker-logs
 
-#Send to another Department Api 
+#Send to another Department Api
 NEXT_PUBLIC_SEND_TO_ANOTHER_DEPARTMENT=${NEXT_PUBLIC_API_URL}/sub-batches/advance-department
+
+#Sub-batch History API
+NEXT_PUBLIC_SUB_BATCH_HISTORY=${NEXT_PUBLIC_API_URL}/department-sub-batches/sub-batch-history
