Bluehsark Wednesday last

--- a/.env
+++ b/.env
@@ -73,3 +73,24 @@ NEXT_PUBLIC_SEND_TO_ANOTHER_DEPARTMENT=${NEXT_PUBLIC_API_URL}/sub-batches/advanc
 
 #Sub-batch History API
 NEXT_PUBLIC_SUB_BATCH_HISTORY=${NEXT_PUBLIC_API_URL}/department-sub-batches/sub-batch-history
+
+# Inventory endpoints
+NEXT_PUBLIC_CREATE_INVENTORY=${NEXT_PUBLIC_API_URL}/inventory
+NEXT_PUBLIC_GET_INVENTORY=${NEXT_PUBLIC_API_URL}/inventory
+NEXT_PUBLIC_GET_INVENTORY_BY_ID=${NEXT_PUBLIC_API_URL}/inventory
+NEXT_PUBLIC_UPDATE_INVENTORY=${NEXT_PUBLIC_API_URL}/inventory
+NEXT_PUBLIC_DELETE_INVENTORY=${NEXT_PUBLIC_API_URL}/inventory
+
+# Inventory Subtraction endpoints
+NEXT_PUBLIC_CREATE_INVENTORY_SUBTRACTION=${NEXT_PUBLIC_API_URL}/inventory-subtraction
+NEXT_PUBLIC_GET_INVENTORY_SUBTRACTION=${NEXT_PUBLIC_API_URL}/inventory-subtraction
+NEXT_PUBLIC_GET_INVENTORY_SUBTRACTION_BY_ID=${NEXT_PUBLIC_API_URL}/inventory-subtraction
+NEXT_PUBLIC_GET_INVENTORY_SUBTRACTION_BY_INVENTORY=${NEXT_PUBLIC_API_URL}/inventory-subtraction/inventory
+NEXT_PUBLIC_DELETE_INVENTORY_SUBTRACTION=${NEXT_PUBLIC_API_URL}/inventory-subtraction
+
+# Inventory Addition endpoints
+NEXT_PUBLIC_CREATE_INVENTORY_ADDITION=${NEXT_PUBLIC_API_URL}/inventory/additions
+NEXT_PUBLIC_GET_INVENTORY_ADDITION=${NEXT_PUBLIC_API_URL}/inventory/additions
+NEXT_PUBLIC_GET_INVENTORY_ADDITION_BY_ID=${NEXT_PUBLIC_API_URL}/inventory/additions
+NEXT_PUBLIC_GET_INVENTORY_ADDITION_BY_INVENTORY=${NEXT_PUBLIC_API_URL}/inventory/additions/inventory
+NEXT_PUBLIC_DELETE_INVENTORY_ADDITION=${NEXT_PUBLIC_API_URL}/inventory/additions
