--- a/.env
+++ b/.env
@@ -67,6 +67,8 @@ NEXT_PUBLIC_GET_SUBBATCH_SUPERVISOR=${NEXT_PUBLIC_API_URL}/supervisors/sub-batch
 #Workers Logs
 NEXT_PUBLIC_CREATE_WORKER_LOGS=${NEXT_PUBLIC_API_URL}/worker-logs/logs
 NEXT_PUBLIC_GET_WORKER_LOGS=${NEXT_PUBLIC_API_URL}/worker-logs
+NEXT_PUBLIC_UPDATE_WORKER_LOG=${NEXT_PUBLIC_API_URL}/worker-logs
+NEXT_PUBLIC_DELETE_WORKER_LOG=${NEXT_PUBLIC_API_URL}/worker-logs
 
 #Send to another Department Api
 NEXT_PUBLIC_SEND_TO_ANOTHER_DEPARTMENT=${NEXT_PUBLIC_API_URL}/sub-batches/advance-department
